--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "@hbrwang/cloudbase-access",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "用于快速创建CloudBase支持HTTP访问服务的云函数",
+  "homepage": "https://github.com/hbrwang/cloudbase-access",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hbrwang/cloudbase-access"
+  },
+  "bugs": {
+    "url": "https://github.com/hbrwang/cloudbase-access/issues",
+    "email": "hbrwang@outlook.com"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
