--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hbrwang/cloudbase-access",
-  "version": "0.5.8",
+  "version": "0.5.9",
   "description": "用于快速创建CloudBase支持HTTP访问服务的云函数",
   "homepage": "https://github.com/hbrwang/cloudbase-access",
   "repository": {
@@ -13,7 +13,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "eslint": "eslint src --ext .ts"
   },
   "jest": {
     "testEnvironment": "node"
@@ -26,8 +27,14 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.1",
     "linq": "^3.2.3",
+    "prettier": "^2.1.2",
     "ts-jest": "^26.4.3",
     "typescript": "^4.0.5"
   }
