--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,10 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "noImplicitAny": true,
-    "removeComments": true,
-    "preserveConstEnums": true,
-    "sourceMap": true,
+    "declaration": true,
     "outDir": "./dist",
-    "target": "ES2020"
+    "target": "ES2020",
+    "strict": true
   },
   "exclude": ["test"]
 }
