--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hbrwang/cloudbase-access",
-  "version": "0.5.19",
+  "version": "0.5.20",
   "description": "用于快速创建CloudBase支持HTTP访问服务的云函数",
   "homepage": "https://github.com/hbrwang/cloudbase-access",
   "repository": {
@@ -30,7 +30,8 @@
   "license": "MIT",
   "dependencies": {
     "@types/node": "^14.14.5",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "linq": "^3.2.3"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
@@ -40,7 +41,6 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.1",
-    "linq": "^3.2.3",
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.3",
     "typescript": "^4.0.5"
