--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hbrwang/cloudbase-access",
   "version": "0.5.22",
-  "description": "用于快速创建CloudBase支持HTTP访问服务的云函数",
+  "description": "利用 NodeJS 和 CloudBase 快速创建 MVC 架构的 Serverless RESTful Api",
   "homepage": "https://github.com/hbrwang/cloudbase-access",
   "repository": {
     "type": "git",
@@ -29,21 +29,21 @@
   "author": "hbrwang",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^14.14.5",
+    "@types/node": "^14.14.10",
     "fs": "0.0.1-security",
     "linq": "^3.2.3"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
-    "eslint": "^7.12.1",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.6.1",
-    "prettier": "^2.1.2",
-    "ts-jest": "^26.4.3",
-    "typescript": "^4.0.5"
+    "jest": "^26.6.3",
+    "prettier": "^2.2.0",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.2"
   },
   "files": [
     "dist/"
