--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "deploy": "tsc && npm publish --access=public",
     "test": "jest",
     "eslint": "eslint src --ext .ts"
   },
