--- a/demo/cloudbase-access-demo/package.json
+++ b/demo/cloudbase-access-demo/package.json
@@ -8,7 +8,7 @@
     "build:prod": "bash build.sh cad",
     "deploy:test": "bash deploy.sh test",
     "deploy:prod": "bash deploy.sh cad",
-    "eslint": "eslint src --ext .ts",
+    "eslint": "eslint . --ext .ts",
     "test": "jest"
   },
   "author": "",
