--- a/demo/cloudbase-access-demo/package.json
+++ b/demo/cloudbase-access-demo/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cloudbase-access-demo",
   "version": "0.0.2",
-  "description": "<a href=\"https://github.com/TencentCloudBase/cloudbase-templates\"><img src=\"https://main.qcloudimg.com/raw/7b50431d8cef29d9ebb82c4ff2e6032c.png\"></a>",
-  "main": "dist/index.js",
+  "description": "a demo of cloudbase-access",
+  "main": "index.js",
   "scripts": {
     "build:test": "bash build.sh test",
     "build:prod": "bash build.sh cad",
@@ -11,7 +11,7 @@
     "eslint": "eslint . --ext .ts",
     "test": "jest"
   },
-  "author": "",
+  "author": "hubery.wang",
   "license": "ISC",
   "dependencies": {
     "@cloudbase/node-sdk": "^2.3.5",
