--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "lib": [
+      "ES2020"
+    ],
     "module": "commonjs",
     "declaration": true,
     "outDir": "./dist",
@@ -7,8 +10,7 @@
     "strict": true
   },
   "exclude": [
-    "tests",
-    "routerTest",
+    "test",
     "dist",
     "demo"
   ]
