--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "scripts": {
     "build": "tsc",
     "deploy": "tsc && npm publish --access=public",
-    "test": "tsc && bash test.sh",
+    "test": "jest",
     "eslint": "eslint src --ext .ts"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "author": "hal-wang",
   "license": "MIT",
@@ -33,13 +36,16 @@
     "linq": "^3.2.3"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.19",
     "@types/node": "^14.14.14",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   },
   "files": [
