--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hal-wang/cloudbase-access",
-  "version": "0.8.2",
+  "version": "0.8.3-beta.1",
   "description": "利用 NodeJS 和 CloudBase 快速创建 MVC 架构的 Serverless RESTful Api",
   "homepage": "https://github.com/hal-wang/cloudbase-access",
   "repository": {
@@ -33,7 +33,7 @@
   "scripts": {
     "build": "tsc",
     "deploy": "tsc && npm publish --access=public",
-    "deploy:beta": "tsc && npm publish --tag beta --access=public",
+    "deploy:beta": "tsc && npm publish --tag=beta --access=public",
     "test": "jest",
     "eslint": "eslint src --ext .ts"
   },
@@ -43,19 +43,19 @@
   "author": "hal-wang",
   "license": "MIT",
   "dependencies": {
-    "@cloudbase/node-sdk": "^2.4.7",
-    "@types/node": "^14.14.19",
+    "@cloudbase/node-sdk": "^2.5.0",
+    "@types/node": "^14.14.22",
     "fs": "0.0.1-security",
     "linq": "^3.2.3"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.19",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.0",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.22",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.4.4",
