--- a/demo/cloudbase-access-api/package.json
+++ b/demo/cloudbase-access-api/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@cloudbase/node-sdk": "^2.5.0",
-    "@hal-wang/cloudbase-access": "^0.8.3",
+    "@hal-wang/cloudbase-access": "^0.9.0-beta.1",
     "linq": "^3.2.3"
   },
   "devDependencies": {
