--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "build": "tsc",
     "deploy": "tsc && npm publish --access=public",
     "deploy:beta": "tsc && npm publish --tag=beta --access=public",
+    "map": "cba-map",
     "test": "jest",
     "eslint": "eslint src --ext .ts"
   },
@@ -60,6 +61,9 @@
     "prettier": "^2.2.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
+  },
+  "bin": {
+    "cba-map": "bin/cba-map.js"
   },
   "files": [
     "dist/"
