--- a/demo/cloudbase-access-api/package.json
+++ b/demo/cloudbase-access-api/package.json
@@ -15,8 +15,9 @@
   "license": "MIT",
   "dependencies": {
     "@cloudbase/node-sdk": "^2.5.0",
-    "@hal-wang/cloudbase-access": "^0.9.0-beta.3",
-    "linq": "^3.2.3"
+    "@hal-wang/cloudbase-access": "^0.9.0-beta.7",
+    "linq": "^3.2.3",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
