--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hal-wang/cloudbase-access",
   "version": "0.9.0",
-  "description": "利用 NodeJS 和 CloudBase 快速创建 MVC 架构的 Serverless RESTful Api",
+  "description": "利用 NodeJS 和 CloudBase 快速创建 Serverless RESTful Api",
   "homepage": "https://github.com/hal-wang/cloudbase-access",
   "repository": {
     "type": "git",
