--- a/demo/cba-todo/cba-todo-api/package.json
+++ b/demo/cba-todo/cba-todo-api/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@cloudbase/node-sdk": "^2.5.0",
-    "@hal-wang/cloudbase-access": "^0.9.4",
+    "@hal-wang/cloudbase-access": "^0.9.5-beta.1",
     "linq": "^3.2.3",
     "moment": "^2.29.1"
   },
