--- a/demo/cba-todo/cba-todo-api/package.json
+++ b/demo/cba-todo/cba-todo-api/package.json
@@ -17,13 +17,15 @@
     "@cloudbase/node-sdk": "^2.5.0",
     "@hal-wang/cloudbase-access": "^0.9.5-beta.1",
     "linq": "^3.2.3",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
+    "@types/request": "^2.48.5",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
