--- a/demo/cba-todo/cba-todo-web/package.json
+++ b/demo/cba-todo/cba-todo-web/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy":"vue-cli-service build && bash deploy.sh"
   },
   "dependencies": {
     "ant-design-vue": "^1.7.2",
