--- a/demo/cba-todo/package.json
+++ b/demo/cba-todo/package.json
@@ -1,6 +1,8 @@
 {
   "name": "cba-todo",
   "scripts": {
+    "install": "cd cba-todo-api && npm install && cd ../cba-todo-web && npm install && cd ..",
+    "deploy": "cd cba-todo-api && npm run deploy && cd ../cba-todo-web && npm run deploy && cd ..",
     "framework": "cd cba-todo-api && npm install && npm run build && cd .."
   },
   "keywords": [],
