--- a/demo/cba-todo/cba-todo-web/.env.development
+++ b/demo/cba-todo/cba-todo-web/.env.development
@@ -1,3 +1,3 @@
 ENV = 'development'
 VUE_APP_PROXY_URL = '/dev-api'
-VUE_APP_BASE_API = 'https://cb-api.hal.wang/cba-todo'
+VUE_APP_BASE_API = 'https://cba-todo-api.hal.wang/cba-todo'
