--- a/demo/cba-todo/cba-todo-api/tsconfig.json
+++ b/demo/cba-todo/cba-todo-api/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "compilerOptions": {
+    "lib": [
+      "esnext"
+    ],
     "module": "commonjs",
     "declaration": true,
     "outDir": "./dist",
-    "target": "ES2020",
+    "target": "esnext",
     "strict": true
   },
   "exclude": [
