--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
     "lib": [
-      "ES2020"
+      "esnext"
     ],
     "module": "commonjs",
     "declaration": true,
     "outDir": "./dist",
-    "target": "ES2020",
+    "target": "esnext",
     "strict": true
   },
   "exclude": [
