--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hal-wang/cloudbase-access",
-  "version": "2.0.0-beta.3",
+  "version": "2.0.0-beta.5",
   "description": "利用 NodeJS 和 CloudBase 快速创建 Serverless RESTful Api",
   "homepage": "https://github.com/hal-wang/cloudbase-access",
   "repository": {
@@ -44,7 +44,8 @@
   "license": "MIT",
   "dependencies": {
     "@types/node": "^15.3.0",
-    "linq": "^3.2.3"
+    "linq": "^3.2.3",
+    "shelljs": "^0.8.4"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
@@ -56,7 +57,6 @@
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^26.6.3",
     "prettier": "^2.3.0",
-    "shelljs": "^0.8.4",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
