refactor: rename response -> res

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "build": "sh build.sh",
     "deploy": "sh build.sh && npm publish --access=public",
     "deploy:beta": "sh build.sh && npm publish --tag=beta --access=public",
-    "test": "jest",
-    "eslint": "eslint src --ext .ts"
+    "test": "npm run build && jest",
+    "lint": "eslint src --ext .ts"
   },
   "jest": {
     "testEnvironment": "node"
