feat: stringed staticItem

--- a/demo/cba.config.json
+++ b/demo/cba.config.json
@@ -9,10 +9,7 @@
         "source": "static",
         "target": "assets"
       },
-      {
-        "source": "static.txt",
-        "target": "read.txt"
-      }
+      "static.txt"
     ]
   },
   "doc": {
